--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
   },
   "homepage": "https://github.com/dshadowexp/SoccerManagerBELite#readme",
   "dependencies": {
-    "express": "^4.18.2"
+    "config": "^3.3.9",
+    "express": "^4.18.2",
+    "mongoose": "^6.8.4"
   },
   "devDependencies": {
     "nodemon": "^2.0.20"
