--- a/package.json
+++ b/package.json
@@ -19,8 +19,12 @@
   },
   "homepage": "https://github.com/dshadowexp/SoccerManagerBELite#readme",
   "dependencies": {
+    "bcrypt": "^5.1.0",
     "config": "^3.3.9",
     "express": "^4.18.2",
+    "joi": "^17.7.0",
+    "jsonwebtoken": "^9.0.0",
+    "lodash": "^4.17.21",
     "mongoose": "^6.8.4",
     "swagger-jsdoc": "^6.2.8",
     "swagger-ui-express": "^4.6.0"
