--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "dependencies": {
     "bcrypt": "^5.1.0",
     "config": "^3.3.9",
+    "ejs": "^3.1.8",
     "express": "^4.18.2",
     "joi": "^17.7.0",
     "joi-objectid": "^4.0.2",
@@ -28,6 +29,7 @@
     "lodash": "^4.17.21",
     "mongoose": "^6.8.4",
     "nodemailer": "^6.9.1",
+    "nodemailer-sendgrid-transport": "^0.2.0",
     "swagger-jsdoc": "^6.2.8",
     "swagger-ui-express": "^4.6.0"
   },
