--- a/package.json
+++ b/package.json
@@ -29,11 +29,12 @@
     "lodash": "^4.17.21",
     "mongoose": "^6.8.4",
     "nodemailer": "^6.9.1",
-    "nodemailer-sendgrid-transport": "^0.2.0",
     "swagger-jsdoc": "^6.2.8",
     "swagger-ui-express": "^4.6.0"
   },
   "devDependencies": {
-    "nodemon": "^2.0.20"
+    "jest": "^29.4.1",
+    "nodemon": "^2.0.20",
+    "supertest": "^6.3.3"
   }
 }
