--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "config": "^3.3.9",
     "ejs": "^3.1.8",
     "express": "^4.18.2",
+    "helmet": "^6.0.1",
     "joi": "^17.7.0",
     "joi-objectid": "^4.0.2",
     "jsonwebtoken": "^9.0.0",
