--- a/package.json
+++ b/package.json
@@ -5,7 +5,15 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "test": "jest"
+    "dev": "nodemon ./app.js",
+    "test": "jest --detectOpenHandles --watchAll"
+  },
+  "jest": {
+    "verbose": false,
+    "testEnvironment": "node",
+    "transform": {
+      "^.+\\.[t|j]sx?$": "babel-jest"
+    }
   },
   "repository": {
     "type": "git",
@@ -34,6 +42,8 @@
     "swagger-ui-express": "^4.6.0"
   },
   "devDependencies": {
+    "@babel/preset-env": "^7.20.2",
+    "babel-jest": "^29.4.1",
     "jest": "^29.4.1",
     "nodemon": "^2.0.20",
     "supertest": "^6.3.3"
